build: add deploy command

--- a/apps/home/project.json
+++ b/apps/home/project.json
@@ -75,6 +75,13 @@
         "jestConfig": "apps/home/jest.config.ts",
         "passWithNoTests": true
       }
+    },
+    "deploy": {
+      "executor": "nx:run-commands",
+      "outputs": [],
+      "options": {
+        "command": "aws s3 sync dist/apps/home s3://vendittelli.co.uk"
+      }
     }
   },
   "tags": []
