build: add production deployment
Add deploying to the S3 bucket to the CI workflow for the main branch.

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test"
+    "start": "nx serve --no-cloud",
+    "build": "nx build --no-cloud",
+    "test": "nx test --no-cloud",
+    "deploy": "nx deploy --no-cloud"
   },
   "private": true,
   "dependencies": {
