feat(robots): add robot.txt
Add robots.txt and a sitemap for search engine crawling.

Additionally remove favicon link as it's omission is preferred.

See: https://mathiasbynens.be/notes/rel-shortcut-icon

--- a/apps/home/project.json
+++ b/apps/home/project.json
@@ -21,7 +21,9 @@
           "apps/home/src/favicon.ico",
           "apps/home/src/assets",
           "apps/home/src/.well-known",
-          "apps/home/src/humans.txt"
+          "apps/home/src/humans.txt",
+          "apps/home/src/robots.txt",
+          "apps/home/src/sitemap.xml"
         ],
         "styles": ["apps/home/src/styles.scss"],
         "scripts": [],
