--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,14 @@
 {
   "recommendations": [
-    "nrwl.angular-console",
+    "dbaeumer.vscode-eslint",
+    "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
     "firsttris.vscode-jest-runner",
-    "dbaeumer.vscode-eslint"
+    "gamunu.vscode-yarn",
+    "hashicorp.terraform",
+    "mrmlnc.vscode-json5",
+    "nrwl.angular-console",
+    "redhat.vscode-yaml",
+    "streetsidesoftware.code-spell-checker"
   ]
 }
