--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,7 @@
     "ghcr.io/devcontainers/features/github-cli:1": {},
     "ghcr.io/devcontainers/features/terraform:1": {}
   },
+  "postCreateCommand": "git config commit.gpgsign=true && git config tag.gpgsign=true",
   "customizations": {
     "vscode": {
       "extensions": [
