--- a/package.json
+++ b/package.json
@@ -55,5 +55,9 @@
     "ts-jest": "28.0.8",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
+  },
+  "volta": {
+    "node": "18.12.1",
+    "yarn": "1.22.19"
   }
 }
