ci(home): make deploy depend on build
Ensure that build has always run before we attempt a deployment.

--- a/apps/home/project.json
+++ b/apps/home/project.json
@@ -86,6 +86,7 @@
     },
     "deploy": {
       "executor": "nx:run-commands",
+      "dependsOn": ["build"],
       "options": {
         "command": "aws s3 sync dist/apps/home s3://vendittelli.co.uk --delete"
       }
