--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "conventionalCommits.scopes": ["common-ui", "home", "security"]
+  "conventionalCommits.scopes": ["common-ui", "e2e", "home", "security"]
 }
