--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       parallel-commands-on-agents: |
         yarn nx affected --target=lint --parallel=3
         yarn nx affected --target=test --parallel=3 --ci --code-coverage
-        yarn nx affected --target=e2e --parallel=3 --record --key ${{ secrets.CYPRESS_RECORD_KEY }}
+        yarn nx affected --target=e2e --parallel=3
         yarn nx affected --target=build --parallel=3
       artifacts-name: dist
       artifacts-path: dist
