ci(terraform): add TFLint
Add TFLint to lint terraform configuration.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "esbenp.prettier-vscode",
     "firsttris.vscode-jest-runner",
     "gamunu.vscode-yarn",
+    "hashicorp.hcl",
     "hashicorp.terraform",
     "mrmlnc.vscode-json5",
     "nrwl.angular-console",
