--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,7 @@
         "esbenp.prettier-vscode",
         "firsttris.vscode-jest-runner",
         "gamunu.vscode-yarn",
+        "hashicorp.hcl",
         "hashicorp.terraform",
         "mrmlnc.vscode-json5",
         "nrwl.angular-console",
