--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -10,9 +10,25 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.ref }}
 
-      - name: Render terraform docs and push changes back to PR
+      - name: Render terraform docs
         uses: terraform-docs/gh-actions@v1
         with:
           working-dir: terraform
-          git-commit-message: 'docs(terraform): update terraform docs'
-          git-push: 'true'
+          git-push: 'false'
+
+      - name: Commit and push signed changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          FILE_TO_COMMIT: terraform/README.md
+          DESTINATION_BRANCH: ${{ github.head_ref }}
+        run: |
+          export TODAY=$( date -u '+%Y-%m-%d' )
+          export MESSAGE="docs(terraform): update terraform docs"
+          export SHA=$( git rev-parse $DESTINATION_BRANCH:$FILE_TO_COMMIT )
+          export CONTENT=$( base64 -i $FILE_TO_COMMIT )
+          gh api --method PUT /repos/:owner/:repo/contents/$FILE_TO_COMMIT \
+            --field message="$MESSAGE" \
+            --field content="$CONTENT" \
+            --field encoding="base64" \
+            --field branch="$DESTINATION_BRANCH" \
+            --field sha="$SHA"
