ci(terraform): generate terraform-docs pre-commit
Generating as part of the pipeline caused issues with verified commits
and re-triggering actions on generated commits. It is simpler to
generate locally and lint the result.

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,4 +1,4 @@
-name: TFLint
+name: TFLint & terraform-docs
 
 on:
   push:
@@ -35,3 +35,9 @@ jobs:
 
       - name: Run TFLint
         run: tflint -f compact
+
+      - name: Check terraform-docs
+        uses: terraform-docs/gh-actions@v1
+        with:
+          working-dir: terraform
+          fail-on-diff: 'true'
