--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -4,7 +4,8 @@ on:
   pull_request:
 
 jobs:
-  lint:
+  commitlint:
+    name: Run commitlint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
