--- a/terraform/.terraform-docs.yml
+++ b/terraform/.terraform-docs.yml
@@ -3,6 +3,10 @@ formatter: markdown table
 output:
   file: README.md
   mode: replace
+  template: |
+    <!-- BEGIN_TF_DOCS -->
+    {{ .Content }}
+    <!-- END_TF_DOCS -->
 
 settings:
   hide-empty: true
