--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "nx build --no-cloud",
     "test": "nx test --no-cloud",
     "deploy": "nx deploy --no-cloud",
+    "commit": "git-cz",
     "prepare": "husky install"
   },
   "private": true,
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
+    "@commitlint/cz-commitlint": "^17.2.0",
     "@nrwl/cli": "15.0.13",
     "@nrwl/cypress": "15.0.13",
     "@nrwl/eslint-plugin-nx": "15.0.13",
@@ -37,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "29.3.1",
+    "commitizen": "^4.2.5",
     "cypress": "^11.0.0",
     "eslint": "~8.27.0",
     "eslint-config-prettier": "8.5.0",
@@ -46,6 +49,7 @@
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "^8.0.0",
+    "inquirer": "8",
     "jest": "29.3.1",
     "jest-environment-jsdom": "29.3.1",
     "nx": "15.0.13",
@@ -59,5 +63,10 @@
   "volta": {
     "node": "18.12.1",
     "yarn": "1.22.19"
+  },
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/cz-commitlint"
+    }
   }
 }
