--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "vendittelli",
   "version": "0.0.0",
+  "private": true,
   "license": "MIT",
   "scripts": {
-    "start": "nx serve --no-cloud",
     "build": "nx build --no-cloud",
-    "test": "nx test --no-cloud",
-    "deploy": "nx deploy --no-cloud",
     "commit": "git-cz",
-    "prepare": "husky install"
+    "deploy": "nx deploy --no-cloud",
+    "prepare": "husky install",
+    "start": "nx serve --no-cloud",
+    "test": "nx test --no-cloud"
   },
-  "private": true,
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/cz-commitlint"
+    }
+  },
   "dependencies": {
     "core-js": "^3.6.5",
     "react": "18.2.0",
@@ -31,6 +36,7 @@
     "@nrwl/react": "15.0.13",
     "@nrwl/web": "15.0.13",
     "@nrwl/workspace": "15.0.13",
+    "@prettier/plugin-xml": "^2.2.0",
     "@testing-library/react": "13.4.0",
     "@types/jest": "29.2.2",
     "@types/node": "18.11.9",
@@ -53,7 +59,8 @@
     "jest": "29.3.1",
     "jest-environment-jsdom": "29.3.1",
     "nx": "15.0.13",
-    "prettier": "^2.6.2",
+    "prettier": "^2.7.1",
+    "prettier-plugin-packagejson": "^2.3.0",
     "pretty-quick": "^3.1.3",
     "react-test-renderer": "18.2.0",
     "ts-jest": "29.0.3",
@@ -63,10 +70,5 @@
   "volta": {
     "node": "18.12.1",
     "yarn": "1.22.19"
-  },
-  "config": {
-    "commitizen": {
-      "path": "@commitlint/cz-commitlint"
-    }
   }
 }
