--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     }
   },
   "dependencies": {
+    "@csstools/normalize.css": "^12.0.0",
     "core-js": "^3.6.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
