--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,5 @@
     "security",
     "terraform"
   ],
-  "cSpell.words": ["commitlint", "tflint"]
+  "cSpell.words": ["commitlint", "HSTS", "tflint"]
 }
