--- a/docs/_data/topics.yml
+++ b/docs/_data/topics.yml
@@ -4,7 +4,9 @@
   title: Infrastructure
 - path: pages/technology
   title: Technology
-- path: pages/dependencies.md
+- path: pages/dependencies
   title: Dependencies
 - path: security
   title: Security
+- path: pages/seo
+  title: Search Engine Optimisation (SEO)
