docs(dev): add development docs
Add documentation for:

- dev containers
- version control
- nx basics

re #66

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,5 @@
     "security",
     "terraform"
   ],
-  "cSpell.words": ["commitlint", "HSTS", "tflint"]
+  "cSpell.words": ["codespaces", "commitlint", "devcontainer", "HSTS", "tflint"]
 }
