docs(architecture): add deployment diagram
Add a diagram of the deployed components of the project and how they relate to eachother.

re #66

--- a/docs/_data/topics.yml
+++ b/docs/_data/topics.yml
@@ -10,3 +10,5 @@
   title: Search Engine Optimisation (SEO)
 - path: pages/development
   title: Development
+- path: architecture
+  title: Architecture
