--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,12 @@
     "security",
     "terraform"
   ],
-  "cSpell.words": ["codespaces", "commitlint", "devcontainer", "HSTS", "tflint"]
+  "cSpell.words": [
+    "codespaces",
+    "commitlint",
+    "devcontainer",
+    "HSTS",
+    "snyk",
+    "tflint"
+  ]
 }
