--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,10 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base", ":semanticCommitTypeAll(chore)"],
-  "packageRules": [
-    {
-      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
-      "automerge": true
-    }
+  "extends": [
+    "config:base",
+    ":pinAllExceptPeerDependencies",
+    ":automergeMinor",
+    ":semanticCommitTypeAll(chore)"
   ]
 }
