chore(deps): exclude ruby from pinning
Disable ruby gems from being pinned, with the exception of GitHub pages.

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -5,5 +5,14 @@
     ":pinAllExceptPeerDependencies",
     ":automergeMinor",
     ":semanticCommitTypeAll(chore)"
+  ],
+  "packageRules": [
+    {
+      "description": "Only update github-pages gem",
+      "matchManagers": ["bundler"],
+      "matchPackagePatterns": ["*"],
+      "excludePackagePatterns": ["github-pages"],
+      "enabled": false
+    }
   ]
 }
