--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,10 +1,10 @@
-name: TFLint & terraform-docs
+name: Terraform
 
 on:
   push:
-    branches:
-      - main
+    branches: ['main']
   pull_request:
+    branches: ['main']
 
 defaults:
   run:
@@ -12,7 +12,7 @@ defaults:
 
 jobs:
   tflint:
-    name: Run TFLint
+    name: Lint and document terraform
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source code
