chore(deps): add dependencies label to renovate

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,6 +6,8 @@
     ":automergeMinor",
     ":semanticCommitTypeAll(chore)"
   ],
+  "labels": ["dependencies"],
+  "dependencyDashboardLabels": ["dependencies"],
   "packageRules": [
     {
       "description": "Only update github-pages gem",
