--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "core-js": "3.26.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "6.4.1",
     "regenerator-runtime": "0.13.11",
     "tslib": "2.4.1"
   },
@@ -38,11 +39,13 @@
     "@nrwl/web": "15.2.0",
     "@nrwl/workspace": "15.2.0",
     "@prettier/plugin-xml": "2.2.0",
+    "@spaceribs/nx-web-ext": "^0.3.1",
     "@testing-library/react": "13.4.0",
     "@types/jest": "29.2.3",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "5.43.0",
     "@typescript-eslint/parser": "5.43.0",
     "babel-jest": "29.3.1",
