--- a/apps/home/project.json
+++ b/apps/home/project.json
@@ -26,6 +26,9 @@
           "apps/home/src/sitemap.xml"
         ],
         "styles": ["apps/home/src/styles.scss"],
+        "stylePreprocessorOptions": {
+          "includePaths": ["libs/common-ui/src/lib/styles"]
+        },
         "scripts": [],
         "webpackConfig": "@nrwl/react/plugins/webpack"
       },
