--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nrwl/eslint-plugin-nx": "15.2.1",
     "@nrwl/jest": "15.2.1",
     "@nrwl/linter": "15.2.1",
+    "@nrwl/node": "15.2.1",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "15.2.1",
     "@nrwl/web": "15.2.1",
