fix(terraform): add github token for tflint
A lot of the GitHub actions were failing for exceeding the rate limit
with the default github token. So I have added a custom token as a
secret for a higher rate limit.

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,12 +26,16 @@ jobs:
 
       - name: Setup TFLint
         uses: terraform-linters/setup-tflint@v3
+        with:
+          github_token: ${{ secrets.TFLINT_GITHUB_TOKEN }}
 
       - name: Show version
         run: tflint --version
 
       - name: Init TFLint
         run: tflint --init
+        env:
+          GITHUB_TOKEN: ${{ secrets.TFLINT_GITHUB_TOKEN }}
 
       - name: Run TFLint
         run: tflint -f compact
