fix(home): disable hmr for home
Hot module replacement was causing the e2e tests to fail, disabling it
solved the issue.

--- a/apps/home/project.json
+++ b/apps/home/project.json
@@ -58,7 +58,7 @@
       "defaultConfiguration": "development",
       "options": {
         "buildTarget": "home:build",
-        "hmr": true
+        "hmr": false
       },
       "configurations": {
         "development": {
