refactor: migrate to nx v16
Apply migrations for nx v16

--- a/apps/home-e2e/project.json
+++ b/apps/home-e2e/project.json
@@ -5,7 +5,7 @@
   "projectType": "application",
   "targets": {
     "e2e": {
-      "executor": "@nrwl/cypress:cypress",
+      "executor": "@nx/cypress:cypress",
       "dependsOn": ["^prepare"],
       "options": {
         "cypressConfig": "apps/home-e2e/cypress.config.ts",
@@ -19,7 +19,7 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["apps/home-e2e/**/*.{js,ts}"]
