--- a/package.json
+++ b/package.json
@@ -25,27 +25,27 @@
     "tslib": "2.5.3"
   },
   "devDependencies": {
+    "@babel/preset-react": "7.22.5",
     "@commitlint/cli": "17.6.5",
     "@commitlint/config-conventional": "17.6.5",
     "@commitlint/cz-commitlint": "17.5.0",
-    "@nrwl/cli": "15.9.3",
-    "@nrwl/cypress": "16.3.2",
-    "@nrwl/eslint-plugin-nx": "16.3.2",
-    "@nrwl/jest": "16.3.2",
-    "@nrwl/linter": "16.3.2",
-    "@nrwl/node": "16.3.2",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "16.3.2",
-    "@nrwl/web": "16.3.2",
-    "@nrwl/workspace": "16.3.2",
+    "@nx/cypress": "16.3.2",
+    "@nx/eslint-plugin": "16.3.2",
+    "@nx/jest": "16.3.2",
+    "@nx/linter": "16.3.2",
+    "@nx/node": "16.3.2",
+    "@nx/react": "16.3.2",
+    "@nx/web": "16.3.2",
+    "@nx/webpack": "16.3.2",
+    "@nx/workspace": "16.3.2",
     "@prettier/plugin-xml": "2.2.0",
     "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
     "@types/node": "18.16.16",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
-    "@typescript-eslint/eslint-plugin": "5.59.8",
-    "@typescript-eslint/parser": "5.59.8",
+    "@typescript-eslint/eslint-plugin": "5.58.0",
+    "@typescript-eslint/parser": "5.58.0",
     "babel-jest": "29.5.0",
     "commitizen": "4.3.0",
     "concurrently": "8.1.0",
@@ -62,10 +62,10 @@
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "nx": "16.3.2",
+    "nx-cloud": "16.0.5",
     "prettier": "2.8.8",
     "prettier-plugin-packagejson": "2.4.3",
     "pretty-quick": "3.1.3",
-    "react-test-renderer": "18.2.0",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.1.3"
