--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -44,6 +44,8 @@ jobs:
 
       - name: Check/update terraform-docs
         uses: terraform-docs/gh-actions@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
           working-dir: terraform
           fail-on-diff: 'true'
