--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
     "e2e",
     "home",
     "security",
-    "terraform"
+    "terraform",
+    "logo"
   ],
   "cSpell.words": [
     "codespaces",
