--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "dependencies": {
     "@csstools/normalize.css": "12.0.0",
     "core-js": "3.32.1",
+    "lodash": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "4.10.1",
+    "react-router-dom": "6.15.0",
     "regenerator-runtime": "0.14.0",
     "tslib": "2.6.2"
   },
@@ -41,6 +44,7 @@
     "@prettier/plugin-xml": "2.2.0",
     "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.4",
+    "@types/lodash": "4.14.197",
     "@types/node": "18.17.11",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
