--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@csstools/normalize.css": "12.0.0",
+    "animejs": "3.2.1",
+    "classnames": "2.3.2",
     "core-js": "3.32.1",
     "lodash": "4.17.21",
     "react": "18.2.0",
@@ -43,6 +45,7 @@
     "@nx/workspace": "16.7.4",
     "@prettier/plugin-xml": "2.2.0",
     "@testing-library/react": "14.0.0",
+    "@types/animejs": "3.1.7",
     "@types/jest": "29.5.4",
     "@types/lodash": "4.14.197",
     "@types/node": "18.17.11",
