--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "dependencies": {
     "@csstools/normalize.css": "12.0.0",
+    "@emailjs/browser": "3.11.0",
     "animejs": "3.2.1",
     "classnames": "2.3.2",
     "core-js": "3.32.1",
     "lodash": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "7.45.4",
     "react-icons": "4.10.1",
     "react-router-dom": "6.15.0",
     "regenerator-runtime": "0.14.0",
